update image size ...

--- a/.htaccess
+++ b/.htaccess
@@ -45,8 +45,9 @@ RewriteRule ^downloads(|/)$ ./index.php?to=downloads
 RewriteRule ^ranking(|/)$ ./index.php?to=ranking
 RewriteRule ^rules(|/)$ ./index.php?to=rules
 RewriteRule ^guides(|/)$ ./index.php?to=guides
-RewriteRule ^buy_credit(|/)$ ./index.php?to=donate
+RewriteRule ^buy_credit(|/)$ ./index.php
 RewriteRule ^setting(|/)$ ./index.php?to=setting
+RewriteRule ^account(|/)$ ./index.php?to=account
 ErrorDocument 404 http://localhost/
 
 #Evitar escaneos, manipulacion e inyeccion SQL (SQL, XSS, etc)
